--- a/webFiles/index.html
+++ b/webFiles/index.html
@@ -57,13 +57,13 @@ else
 			switch(report)
 			{
 				case "itemsBelowPar":
-					document.getElementById("content").src = "reports.html";
+					document.getElementById("content").src = "itemsBelowPar.html";
 					break;
 				case "recommendedPar":
-
+					document.getElementById("content").src = "recommendedPar.html";
 					break;
 				case "historicalUsage":
-
+					document.getElementById("content").src = "historicalUsage.html";
 					break;
 			}
 		}
@@ -168,7 +168,7 @@ else
 
 <!-- Content of web page, determined by header line links -->
 <div class="dbIFrameWindow">
-	<iframe id="content" src="reports.html" class="dbIFrame">
+	<iframe id="content" src="inventory.html" class="dbIFrame">
 	</iframe>
 </div>
 <!-- End content of web page, determined by header line links -->
