--- a/webFiles/inventory.html
+++ b/webFiles/inventory.html
@@ -18,7 +18,7 @@ else
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Orders Page</title>
+	<title>Inventory Page</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -111,7 +111,6 @@ else
 <div class="row">
 	<div class="col-md-1"></div>
 	<div class="col-md-10">
-
 		<?php
 			$db->reportInventory();
 		?>
