--- a/webFiles/orders.html
+++ b/webFiles/orders.html
@@ -96,7 +96,7 @@ else
 					<p> Select .csv order file to upload</p>
 					<input type="file" name="uploadFile">
 					<p></p>
-					<button type="submit" class="btn btn-primary">Receive Orders</button>
+					<button type="submit" class="btn btn-primary">Upload Orders</button>
 					<button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
 				</form>
 			</div>
