--- a/webFiles/inventory.html
+++ b/webFiles/inventory.html
@@ -35,14 +35,15 @@ else
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-4"></div>
-		<div class="col-md-4">
+		<div class="col-md-3"></div>
+		<div class="col-md-6">
 			<div class="btn-group btn-group-justified">
 				<button type="button" class="btn btn-success" data-toggle="modal" data-target="#useItemsWindow">Use Items</button>
 				<button type="button" class="btn btn-success" data-toggle="modal" data-target="#updateParWindow">Update Par Levels</button>
+				<button type="button" class="btn btn-success" data-toggle="modal" data-target="#addPurposeWindow">Add Purpose</button>
 			</div>
 		</div>
-		<div class="col-md-4"></div>
+		<div class="col-md-3"></div>
 	</div>
 </div>
 
@@ -61,7 +62,7 @@ else
 			</div>
 
 			<div class="modal-body">
-				<p>Select what itesm in the storeroom have been used.</p>
+				<p>Select what items in the storeroom have been used.</p>
 				<p></p>
 				<form id="useItemsForm" action="useItems.php" method="post" role="form" style="padding: 16px;">
 					<?php
@@ -92,13 +93,44 @@ else
 			</div>
 
 			<div class="modal-body">
-				<p>Select what itesm in the storeroom have been used.</p>
+				<p>Select item and update par level.</p>
 				<p></p>
 				<form id="updateParForm" action="updatePar.php" method="post" role="form" style="padding: 16px;">
 					<?php
 						$db->getItemsParUpdate();
 					?>
 					<button type="submit" class="btn btn-primary">Update Par Level</button>
+					<button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+				</form>
+			</div>
+
+		</div>
+
+	</div>	
+</div>
+
+<!--Add Purpose modal -->
+<div id="addPurposeWindow" class="modal fade" role="dialog">
+	<div class="modal-dialog">
+		
+		<!--Login modal content -->
+		<div class="modal-content">
+			
+			<div class="modal-header">
+				<h4 class="modal-title">
+					Use Items
+				</h4>
+				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+			</div>
+
+			<div class="modal-body">
+				<p>Select item and a medical purpose for it.</p>
+				<p></p>
+				<form id="addPurposeForm" action=".php" method="post" role="form" style="padding: 16px;">
+					<?php
+						
+					?>
+					<button type="submit" class="btn btn-primary">Add Purpose</button>
 					<button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
 				</form>
 			</div>
